# ocaml-exchange-simulator

./: .gitignore  LICENSE  README.md  dune-project  ocaml-exchange-simulator.opam
bench/: benchmark.ml  dune
data/: example_events.csv
lib/: dune  matching_engine.ml  matching_engine.mli  metrics.ml  metrics.mli  order.ml  order.mli  order_book.ml  order_book.mli  replay.ml  replay.mli  risk_engine.ml  risk_engine.mli  types.ml
test/: dune  test_matching_engine.ml  test_order.ml  test_order_book.ml  test_properties.ml  test_replay.ml  test_risk_engine.ml
