(tests
 (names test_order_book test_matching_engine test_order test_risk_engine
   test_replay)
 (deps
  (glob_files %{project_root}/data/*.csv))
 (libraries exchange))

; Property-based tests use generated order streams (QCheck), so they carry the
; extra QCheck dependency the assertion-based suites above do not need.
(test
 (name test_properties)
 (libraries exchange qcheck-core qcheck-core.runner))
